--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: Montserrat, sans-serif;
+    background-color: rgba(80, 221, 185, 0.3);
 }
 
 #page_div {
@@ -11,14 +12,16 @@ body {
     width: 50%;
     margin: auto;
     text-align: center;
+    font-style: italic;
     font-size: 1.5rem;
 }
 
-#login_page_title {
+#page_title {
     width: 50%;
     margin: auto;
     text-align: center;
-    margin-top: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     font-size: 1.5rem;   
 }
 
@@ -40,6 +43,10 @@ input, button{
     filter: drop-shadow(0.25rem 0.25rem rgba(166, 152, 127, 0.46));
 }
 
+.save_button, .edit_button {
+    width: auto;
+}
+
 button:hover {
     cursor: pointer;
 }
@@ -50,6 +57,11 @@ button:hover {
 
 a {
     text-decoration: none;
+}
+
+#tournament_details_table {
+    width: 10rem;
+    margin: auto;
 }
 
 /* styles for tablet devices (based on iPad air width) */
